# otus_rust_24

./: README.md
backend/: .env  Cargo.toml  Readme.MD
backend/.cargo/: config.toml
backend/sql/: 01-create-schema.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/api/: mod.rs
backend/src/model/: device.rs  error.rs  house.rs  mod.rs  room.rs
ds/: .gitignore  Cargo.toml  Readme.MD  index.html  styles.css
ds/src/: chart.rs  config.rs  crypto.rs  error.rs  fetch.rs  lib.rs  main.rs  main_chart.rs  time.rs
patterns/pattern-builder-demo/: Cargo.toml
patterns/pattern-builder-demo/src/: lib.rs  new_types.rs
smart-house/: Cargo.toml  README.md  cargo.toml
smart-house/example/: Cargo.toml
smart-house/example/src/: main.rs
smart-house/ffi_socket_lib/: Cargo.toml
smart-house/ffi_socket_lib/examples/: ffi_client.rs
smart-house/ffi_socket_lib/src/: lib.rs
smart-house/gui/: Cargo.toml
smart-house/gui/src/: main.rs  toggle.rs
smart-house/smart-house/: Cargo.toml
smart-house/smart-house/src/: error.rs  lib.rs  sh.rs
smart-house/smart-house/src/devices/: mod.rs  socket.rs  thermometer.rs
smart-house/src/: main.rs
smart-house/src/smart_house/: mod.rs  socket.rs  thermometer.rs
smart-house/tcp-socket/: Cargo.toml
smart-house/tcp-socket/examples/: client.rs  srv.rs
smart-house/tcp-socket/src/: client.rs  error.rs  lib.rs  server.rs
smart-house/udp-thermo/: Cargo.toml
smart-house/udp-thermo/examples/: device_srv.rs  receiver.rs
smart-house/udp-thermo/src/: error.rs  lib.rs  rx.rs  tx.rs
visitor/dynamic-visitor/: Cargo.toml
visitor/dynamic-visitor/src/: main.rs
visitor/static-visitor/: Cargo.toml
visitor/static-visitor/src/: main.rs
