[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {  version = "0.8.1", features = ["macros"] }
sqlx = { version = "0.8", features = [ "macros", "runtime-tokio", "postgres", "uuid" ] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = "1"
serde_json = "1"
