[package]
name = "ds"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- crypto
hmac = "0.12"
sha2 = "0.10"
# -- charts gen
charts-rs = "0.3.19"
# -- http request
reqwest = { version = "0.12", features = ["json"] }
# -- serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.138"
# -- async
tokio = { version = "1", features = ["full"] }
